# pandora_geotiff

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GeotiffCreator (OLD).h  GeotiffCreator.h  map_generator.h  map_writer_plugin_interface.h
launch/: geotiff_all.launch
pandora_geotiff/: CMakeLists.txt  package.xml
pandora_geotiff/config/geotiff_creator/: geotiff_creator_params.yaml
pandora_geotiff/include/: GeotiffCreator (OLD).h  GeotiffCreator.h  geotiff_creator.h  mapCreatorInterface.h  map_creator_interface.h  map_generator.h  map_writer_interface.h  map_writer_plugin_interface.h
pandora_geotiff/include/pandora_geotiff/: geotiff_creator.h  map_generator.h  qr_csv_creator.h
pandora_geotiff/launch/: geotiff_all.launch  geotiff_test.launch
pandora_geotiff/src/: DataFusionSrvMock.cpp  GeotiffCreator(OLD).cpp  GeotiffCreator.cpp  geotiff_creator.cpp  map_generator.cpp  pandora_geotiff_node.cpp  qr_csv_creator.cpp  qrcsv_creator.cpp
pandora_geotiff/srv/: SaveMission.srv
pandora_geotiff/test/: CMakeLists.txt
pandora_geotiff/test/scripts/: save_mission_client.py
pandora_geotiff/test/unit/: geotiff_creator_test.cpp
pandora_geotiff_plugins/: CMakeLists.txt  package.xml  pandora_geotiff_plugins.xml
pandora_geotiff_plugins/config/geotiff_plugins/: geotiff_plugins_params.yaml
pandora_geotiff_plugins/src/: geotiff_coverage_plugin.cpp  geotiff_hazmat_plugin.cpp  geotiff_map_coverage_plugin.cpp  geotiff_map_plugin.cpp  geotiff_objects_plugin.cpp  geotiff_path_plugin.cpp  geotiff_qr_plugin.cpp  geotiff_victim_plugin.cpp  prototype_plugin.cpp
src/: GeotiffCreator.cpp  map_generator.cpp  pandora_geotiff_node.cpp
test/: save_mission_client.py  talker.py
